fix: edit footer height, main-page and audiocall content height on mobile-screen

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -24,6 +24,8 @@
     }
 
     @media (max-width: $width-mobile) {
+      flex-direction: column;
+      align-items: center;
       justify-content: space-around;
       flex-basis: 89.1%;
       gap: 22px;
