--- a/src/components/styles/base/_constants.scss
+++ b/src/components/styles/base/_constants.scss
@@ -8,6 +8,7 @@ $indent-basic: 40px;
 
 $header-height: 82px;
 $footer-height: 82.5px;
+$footer-mobile-height: 139.5px;
 
 $font-family-basic: 'Arimo', 'Arial', sans-serif;
 $font-family-additional: 'Balsamiq Sans', 'Comic Sans', cursive;
